--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
+		"@types/mapbox-gl": "^2.7.5",
 		"@types/node": "^16.11.59",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
+		"mapbox-gl": "^2.10.0",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
